<resources>
    <string name="app_name">Dream Cars</string>
    <string name="logo_description">Dream Cars Logo</string>
    <string name="nav_title_cars">Cars</string>
    <string name="nav_title_profile">Profile</string>
    <string name="dummy_car_name">Porsche Boxster 718</string>
    <string name="dummy_car_price">IDR 2.100.000 / 3 Hours</string>
    <string name="button_title_booking">BOOKING</string>
    <string name="detail_car_information">Detail car information</string>
    <string name="dummy_car_fuel">Petrol</string>
    <string name="dummy_car_description">The Ferrari 458 Spider is a high-performance sports car with a retractable hardtop that allows for open-top driving. It is powered by a 4.5-liter V8 engine that produces 562 horsepower and can accelerate from 0 to 60 miles per hour in just 3.4 seconds. The car is known for its sleek and aerodynamic design, advanced technology, and impressive handling and driving dynamics. It is a highly sought-after vehicle among car enthusiasts and is considered a masterpiece of Italian engineering and design.</string>
    <string name="description_title_car_detail">Description:</string>
    <string name="dummy_car_engine">Automatic</string>
    <string name="dummy_car_passengers">2 Passengers</string>
    <string name="iv_share_button_description">Share Button</string>
    <string name="profile_name">I Wayan Adi Sudirtayasa</string>
    <string name="profile_email">yanadisudirta@gmail.com</string>
    <string name="about_me_title_profile">About Me:</string>
    <string name="about_me_description_profile">Only a developer who rarely bathes and exercises</string>
    <string name="profile_image_description">Profile Adi Sudirta</string>
    <string-array name="data_car_photos">
        <item>@drawable/ferrari_458_spyder</item>
        <item>@drawable/mercedez_benz_gle_400</item>
        <item>@drawable/mercedez_benz_slk</item>
        <item>@drawable/mercedez_benz_s_400</item>
        <item>@drawable/mini_cooper</item>
        <item>@drawable/porsche_boxster_718</item>
        <item>@drawable/rolls_royce_ghost</item>
        <item>@drawable/toyota_alphard</item>
        <item>@drawable/toyota_fortuner</item>
        <item>@drawable/toyota_land_cruiser</item>
    </string-array>
    <string-array name="data_car_names">
        <item>Ferrari 458 Spyder</item>
        <item>Mercedez-Benz GLE 400</item>
        <item>Mercedez-Benz SLK</item>
        <item>Mercedez-Benz S400</item>
        <item>Mini Cooper</item>
        <item>Porsche Boxster 718</item>
        <item>Rolls Royce Ghost</item>
        <item>Toyota Alphard</item>
        <item>Toyota Fortuner</item>
        <item>Toyota Land Cruiser</item>
    </string-array>
    <string-array name="data_car_prices">
        <item>IDR 2.100.000 / 3 Hours</item>
        <item>IDR 1.100.000 / 3 Hours</item>
        <item>IDR 3.100.000 / 3 Hours</item>
        <item>IDR 2.100.000 / 3 Hours</item>
        <item>IDR 1.100.000 / 3 Hours</item>
        <item>IDR 2.100.000 / 3 Hours</item>
        <item>IDR 4.100.000 / 3 Hours</item>
        <item>IDR 3.100.000 / 3 Hours</item>
        <item>IDR 2.500.000 / 3 Hours</item>
        <item>IDR 2.000.000 / 3 Hours</item>
    </string-array>
    <string-array name="data_car_fuel">
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="data_car_engine">
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="data_car_passengers">
        <item>2 Passengers</item>
        <item>4 Passengers</item>
        <item>2 Passengers</item>
        <item>4 Passengers</item>
        <item>2 Passengers</item>
        <item>2 Passengers</item>
        <item>6 Passengers</item>
        <item>8 Passengers</item>
        <item>8 Passengers</item>
        <item>8 Passengers</item>
    </string-array>
</resources>