<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:viewBindingIgnore="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="60dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/profile"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <TextView
                android:id="@+id/tv_profile_name"
                style="@style/Text.Heading1"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_name" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/Text.Heading2"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:text="@string/profile_email" />

            <TextView
                android:id="@+id/tv_about_me"
                style="@style/Text.Paragraph"
                android:textStyle="bold"
                android:textColor="@color/black_80"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/about_me_title_profile" />

            <TextView
                android:id="@+id/tv_about_me_description"
                style="@style/Text.Paragraph"
                android:textAlignment="center"
                android:paddingHorizontal="30dp"
                android:text="@string/about_me_description_profile" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>