<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_cars"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="20dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="8dp"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/iv_card_car"
            style="@style/Image"
            android:layout_height="211dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/dummy_car_name"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_car_name"
            style="@style/Text.Heading1"
            android:layout_marginBottom="14dp"
            android:layout_marginHorizontal="25dp"
            tools:text="@string/dummy_car_name" />

        <TextView
            android:id="@+id/tv_car_price"
            style="@style/Text.Heading2"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="25dp"
            tools:text="@string/dummy_car_price" />

        <Button
            android:id="@+id/btn_booking_card_car"
            style="@style/Button"
            android:layout_marginHorizontal="25dp"
            android:text="@string/button_title_booking" />
    </LinearLayout>
</androidx.cardview.widget.CardView>